--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^1.6.2",
+    "flowbite-react": "^0.3.7",
     "next": "13.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.3"
+    "eslint-config-next": "13.1.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
