--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "flowbite": "^1.6.2",
     "flowbite-react": "^0.3.7",
     "next": "13.1.3",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1"
